--- a/src/app.css
+++ b/src/app.css
@@ -83,4 +83,34 @@
 	html {
 		overscroll-behavior: none;
 	}
+	/* Chrome, Edge and Safari */
+	*::-webkit-scrollbar {
+		height: 10px;
+		width: 10px;
+	}
+	*::-webkit-scrollbar-track {
+		border-radius: 5px;
+		background-color: #27272a;
+	}
+
+	*::-webkit-scrollbar-track:hover {
+		background-color: #27272a;
+	}
+
+	*::-webkit-scrollbar-track:active {
+		background-color: #27272a;
+	}
+
+	*::-webkit-scrollbar-thumb {
+		border-radius: 5px;
+		background-color: #4b4b50;
+	}
+
+	*::-webkit-scrollbar-thumb:hover {
+		background-color: #4b4b50;
+	}
+
+	*::-webkit-scrollbar-thumb:active {
+		background-color: #4b4b50;
+	}
 }
